@@ -1,5 +1,12 @@
 2005-10-04  Bruno Haible  <bruno@clisp.org>
 
+	Fix handling of obsolete messages.
+	* msgl-check.c (check_plural): Ignore obsolete messages.
+	* gettext-po.c (po_file_check_all, po_message_check_all,
+	po_message_check_format): Likewise.
+
+2005-10-04  Bruno Haible  <bruno@clisp.org>
+
 	* msgl-check.h (check_message): Remove msgstr_pos argument.
 	* msgl-check.c (check_pair, check_message): Remove msgstr_pos argument.
 	* msgfmt.c (msgfmt_frob_new_message): Update.
